--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
+    "@angular/animations": "^11.0.3",
     "@angular/cdk": "^11.0.1",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
+    "@angular/common": "^11.0.3",
+    "@angular/compiler": "^11.0.3",
+    "@angular/core": "^11.0.3",
+    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/forms": "^11.0.3",
     "@angular/material": "^11.0.1",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
+    "@angular/platform-browser": "^11.0.3",
+    "@angular/platform-browser-dynamic": "^11.0.3",
+    "@angular/router": "^11.0.3",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "angular-calendar": "^0.28.22",
     "date-fns": "^2.16.1",
@@ -29,11 +30,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "~11.0.1",
-    "@angular/compiler-cli": "~11.0.0",
+    "@angular-devkit/build-angular": "^0.1100.3",
+    "@angular/cli": "^11.0.3",
+    "@angular/compiler-cli": "^11.0.3",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.19.8",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
