--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "work-portal",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -9,16 +10,22 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.3",
-    "@angular/cdk": "^11.0.1",
+    "@angular/cdk": "^11.0.2",
+    "@angular/cli": "^11.0.3",
     "@angular/common": "^11.0.3",
     "@angular/compiler": "^11.0.3",
+    "@angular/compiler-cli": "^11.0.3",
     "@angular/core": "^11.0.3",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "^11.0.3",
-    "@angular/material": "^11.0.1",
+    "@angular/material": "^11.0.2",
     "@angular/platform-browser": "^11.0.3",
     "@angular/platform-browser-dynamic": "^11.0.3",
     "@angular/router": "^11.0.3",
@@ -27,6 +34,7 @@
     "date-fns": "^2.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
