--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.1100.3",
     "@angular/animations": "^11.0.3",
     "@angular/cdk": "^11.0.2",
     "@angular/cli": "^11.0.3",
