--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
